Configured datababse path.

--- a/src/IC.DotNet.Interview.Web/Web.config
+++ b/src/IC.DotNet.Interview.Web/Web.config
@@ -9,6 +9,14 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <!--custom user parameters-->
+    
+    <add key="DBPath" value="App_Data/database.json" /> 
+    <!---Keep in this path needs to start at the project root folder-->
+    <!---We could also use connection string for this but since its a plane json file there is no need-->
+    
+    <!---The custom user parameters end here-->
+  
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
