--- a/src/IC.DotNet.Interview.Web/IC.DotNet.Interview.Web.csproj
+++ b/src/IC.DotNet.Interview.Web/IC.DotNet.Interview.Web.csproj
@@ -272,6 +272,7 @@
     <Content Include="Views\User\Login.cshtml" />
     <Content Include="Views\User\LoginButton.cshtml" />
     <Content Include="Views\Task\Edit.cshtml" />
+    <Content Include="Views\Task\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
