--- a/src/IC.DotNet.Interview.Core/IC.DotNet.Interview.Core.csproj
+++ b/src/IC.DotNet.Interview.Core/IC.DotNet.Interview.Core.csproj
@@ -50,12 +50,15 @@
     <Compile Include="Database\DbContext.cs" />
     <Compile Include="Database\IDbContext.cs" />
     <Compile Include="Models\BaseModel.cs" />
+    <Compile Include="Models\Comment.cs" />
     <Compile Include="Models\Task.cs" />
     <Compile Include="Models\Role.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Models\UserRole.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\CommentRepository.cs" />
     <Compile Include="Repositories\GenericRepository.cs" />
+    <Compile Include="Repositories\ICommentRepository.cs" />
     <Compile Include="Repositories\IGenericRepository.cs" />
     <Compile Include="Repositories\IRoleRepository.cs" />
     <Compile Include="Repositories\ITaskRepository.cs" />
