--- a/src/IC.DotNet.Interview.Logic/IC.DotNet.Interview.Logic.csproj
+++ b/src/IC.DotNet.Interview.Logic/IC.DotNet.Interview.Logic.csproj
@@ -69,6 +69,7 @@
     <Compile Include="BL\IUserLogic.cs" />
     <Compile Include="BL\TaskLogic.cs" />
     <Compile Include="BL\UserLogic.cs" />
+    <Compile Include="Models\CommentViewModel.cs" />
     <Compile Include="Models\LoginButtonViewModel.cs" />
     <Compile Include="Models\LoginViewModel.cs" />
     <Compile Include="Models\TaskViewModel.cs" />
