--- a/src/IC.DotNet.Interview.Web/IC.DotNet.Interview.Web.csproj
+++ b/src/IC.DotNet.Interview.Web/IC.DotNet.Interview.Web.csproj
@@ -273,6 +273,7 @@
     <Content Include="Views\User\LoginButton.cshtml" />
     <Content Include="Views\Task\Edit.cshtml" />
     <Content Include="Views\Task\Create.cshtml" />
+    <Content Include="Views\Task\Comment.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
